Reposition: Transform to independent tax consultancy
- Remove all ICAI and CA firm references
- Update positioning to 'Independent Tax Experts'
- Strengthen hero headline and CTAs for conversion
- Replace compliance-focused language with client benefits
- Update trust signals: Practical, Transparent, Results-Oriented
- Modify Why Choose Us with stronger value propositions
- Transform highlight strip with expert positioning
- Update footer disclaimer to general legal terms

--- a/index.html
+++ b/index.html
@@ -76,38 +76,39 @@
       <div class="hero">
         <div class="hero-copy">
           <div class="pill-group">
-            <div class="pill pill-soft">✓ ICAI-Compliant Practice</div>
-            <div class="pill pill-light">Pan-India Services</div>
+            <div class="pill pill-soft">✓ Independent Tax Experts</div>
+            <div class="pill pill-light">Pan-India Client Support</div>
           </div>
-          <h1>Trusted Tax & Compliance Advisory for Individuals, Businesses & Startups in India</h1>
+          <h1>Expert Tax & Compliance Consultancy for Individuals & Businesses in India</h1>
           <p class="lead">
-            Expert handling of Income Tax, GST, ROC, and Business Advisory services by qualified professionals. From ITR
-            filing to company incorporation, we provide comprehensive tax and compliance solutions tailored for Indian
-            businesses and individuals.
+            Navigate India's tax landscape with confidence. From ITR filing to GST compliance, company incorporation to
+            strategic tax planning - we deliver practical, transparent, and reliable tax solutions tailored to your
+            needs.
           </p>
           <div class="hero-actions">
-            <a class="btn primary" href="#contact">Get Free Consultation</a>
-            <a class="btn ghost" href="https://wa.me/919999999999?text=Hi,%20I%20need%20help%20with%20tax%20services"
+            <a class="btn primary" href="#contact">Get Expert Consultation</a>
+            <a class="btn ghost"
+              href="https://wa.me/919999999999?text=Hi,%20I%20need%20expert%20help%20with%20tax%20compliance"
               target="_blank" rel="noopener">Chat on WhatsApp</a>
           </div>
           <div class="trust">
-            <div>✓ Qualified Professionals</div>
-            <div>✓ Confidential & Secure</div>
-            <div>✓ Technology-Enabled</div>
+            <div>✓ Practical & Transparent</div>
+            <div>✓ Client-First Approach</div>
+            <div>✓ Results-Oriented</div>
           </div>
         </div>
         <div class="hero-card">
           <div class="card-header">Why Choose Us</div>
           <div class="card-body">
             <ul class="checklist">
-              <li>Expert-reviewed tax opinions and filings</li>
-              <li>Complete documentation and audit trails</li>
-              <li>Timely compliance reminders</li>
-              <li>Dedicated support for all queries</li>
+              <li>Independent experts focused on your success</li>
+              <li>Practical solutions, not textbook advice</li>
+              <li>Transparent pricing & timely delivery</li>
+              <li>Long-term partnership approach</li>
             </ul>
-            <a class="btn w-full primary" href="#contact">Start Your Consultation</a>
-            <div class="disclaimer">Professional tax and compliance services. No misleading claims or guaranteed
-              results.</div>
+            <a class="btn w-full primary" href="#contact">Start Your Tax Strategy</a>
+            <div class="disclaimer">Professional tax consultancy. This website is for informational purposes only.
+            </div>
           </div>
         </div>
         <div class="hero-visual">
@@ -128,12 +129,12 @@
     <main>
       <section class="section highlight-strip">
         <div class="highlight-grid">
-          <div class="highlight-chip">Qualified Tax Professionals</div>
-          <div class="highlight-chip">ICAI-Compliant Practice</div>
-          <div class="highlight-chip">100% Confidential</div>
-          <div class="highlight-chip">Timely Service Delivery</div>
-          <div class="highlight-chip">Pan-India Coverage</div>
-          <div class="highlight-chip">Technology-Enabled</div>
+          <div class="highlight-chip">Independent Tax Experts</div>
+          <div class="highlight-chip">Practical Tax Solutions</div>
+          <div class="highlight-chip">Transparent Pricing</div>
+          <div class="highlight-chip">Strategic Planning</div>
+          <div class="highlight-chip">Pan-India Support</div>
+          <div class="highlight-chip">Results-Oriented</div>
         </div>
       </section>
 
