Final update: Remove ICAI from footer disclaimer

--- a/index.html
+++ b/index.html
@@ -784,8 +784,8 @@
       <div class="footer-bottom">
         <span id="year"></span> Accura Tax Consultancy. All rights reserved.
         <span class="divider">•</span>
-        This website is for informational purposes only and does not constitute professional solicitation or
-        advertisement under ICAI regulations.
+        This website is for informational purposes only and does not constitute legal or tax advice. All services are
+        subject to formal engagement terms.
       </div>
     </footer>
 
