UI/UX Polish: Typography system & spacing refinements
- Refined typography scale for better hierarchy and readability
- Improved line heights: body 1.65, headings 1.2-1.4
- Added max-width to paragraphs (65-70ch) for optimal reading
- Standardized section spacing (64px vertical, 40px padding)
- Condensed hero lead paragraph for clarity and impact
- Improved heading margins and letter spacing
- Polished services section heading for conciseness

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
           </div>
           <h1>Expert Tax & Compliance Consultancy for Individuals & Businesses in India</h1>
           <p class="lead">
-            Navigate India's tax landscape with confidence. From ITR filing to GST compliance, company incorporation to
-            strategic tax planning - we deliver practical, transparent, and reliable tax solutions tailored to your
-            needs.
+            Professional guidance across Income Tax, GST, ROC Compliance, and strategic Business Advisory. We deliver
+            practical, transparent solutions tailored to your specific needs.
           </p>
           <div class="hero-actions">
             <a class="btn primary" href="#contact">Get Expert Consultation</a>
@@ -286,11 +285,11 @@
       <section id="services" class="section">
         <div class="section-head">
           <div>
-            <p class="eyebrow">Our Services</p>
-            <h2>Comprehensive Tax & Compliance Solutions for Indian Businesses & Individuals</h2>
+            <p class="eyebrow">Services</p>
+            <h2>Comprehensive Tax & Compliance Solutions</h2>
           </div>
           <div class="section-actions">
-            <a class="btn ghost" href="#contact">Consult Now</a>
+            <a class="btn ghost" href="#contact">Get Started</a>
           </div>
         </div>
         <div class="grid cards">
