UI/UX Polish: Service cards, buttons, mobile optimization
Service Card Improvements:
- Condensed descriptions: 30-50% fewer bullets per card
- Income Tax: 6→4 items, GST: 6→4, ROC: 6→4, Business: 6→4
- Removed technical jargon (MGT-7, AOC-4, DIR-3) - cleaner language
- More scannable bullet points

Card & Layout Polish:
- Added flexbox to cards for consistent alignment
- Increased padding: 18px → 20px for better breathing room
- Icon circles: 48px → 50px for better prominence
- Cards now have equal visual weight

Button Standardization:
- Primary buttons: 13px/20px padding for prominence
- Ghost buttons: 12px/20px padding for consistency
- Better size differentiation between primary/secondary CTAs

Mobile Optimization:
- Refined heading sizes for mobile (H1: 24-32px, H2: 20-26px)
- Adjusted section spacing (64px → 48px vertical on mobile)
- Cards stack cleanly in single column
- Full-width CTAs on mobile for easier tapping
- Better pill wrapping and touch targets

--- a/index.html
+++ b/index.html
@@ -293,65 +293,53 @@
           </div>
         </div>
         <div class="grid cards">
-          <!-- Income Tax Services -->
           <article class="card service">
             <div class="icon-circle">₹</div>
             <h3>Income Tax Services</h3>
-            <p><strong>For:</strong> Salaried, Self-Employed, Businesses, NRIs</p>
+            <p><strong>For:</strong> Individuals, Businesses, NRIs</p>
             <ul class="list bullet">
               <li>ITR Filing (ITR-1 to ITR-7)</li>
-              <li>Capital Gains Tax (Property, Shares, Mutual Funds)</li>
-              <li>Tax Planning & Optimization</li>
-              <li>Advance Tax & TDS Computation</li>
-              <li>Income Tax Notices & Assessments</li>
+              <li>Capital Gains & Tax Planning</li>
+              <li>Notices & Assessment Support</li>
               <li>NRI Taxation & Form 15CA/15CB</li>
             </ul>
             <a class="btn w-full ghost" href="#contact">Get Started</a>
           </article>
 
-          <!-- GST Services -->
           <article class="card service">
             <div class="icon-circle">G</div>
             <h3>GST Services</h3>
             <p><strong>For:</strong> Traders, Manufacturers, Service Providers</p>
             <ul class="list bullet">
-              <li>GST Registration & Cancellation</li>
-              <li>GSTR-1, GSTR-3B Monthly/Quarterly Filing</li>
-              <li>GSTR-9 & GSTR-9C Annual Returns</li>
-              <li>ITC Reconciliation (2A/2B)</li>
-              <li>GST Notices, Appeals & Audits</li>
-              <li>E-Way Bill & E-Invoice Advisory</li>
+              <li>GST Registration & Returns Filing</li>
+              <li>GSTR-1, 3B, 9 & 9C Compliance</li>
+              <li>ITC Reconciliation & Optimization</li>
+              <li>GST Notices & Appeals</li>
             </ul>
             <a class="btn w-full ghost" href="#contact">Get Started</a>
           </article>
 
-          <!-- ROC & Company Law -->
           <article class="card service">
             <div class="icon-circle">R</div>
             <h3>ROC & Company Law</h3>
-            <p><strong>For:</strong> Startups, LLPs, Private Limited Companies</p>
+            <p><strong>For:</strong> Startups, LLPs, Private Companies</p>
             <ul class="list bullet">
               <li>Company/LLP Incorporation</li>
-              <li>Annual ROC Filings (MGT-7, AOC-4)</li>
-              <li>Director KYC (DIR-3 KYC)</li>
-              <li>Share Capital Changes & Compliance</li>
+              <li>Annual ROC Filings & Director KYC</li>
+              <li>Share Capital & Compliance Changes</li>
               <li>Company Closure & Strike-off</li>
-              <li>Statutory Registers Maintenance</li>
             </ul>
             <a class="btn w-full ghost" href="#contact">Get Started</a>
           </article>
 
-          <!-- Business Advisory -->
           <article class="card service">
             <div class="icon-circle">B</div>
             <h3>Business Advisory</h3>
             <p><strong>For:</strong> All Business Types</p>
             <ul class="list bullet">
-              <li>Entity Selection (Proprietorship/LLP/Pvt Ltd)</li>
-              <li>Accounting & Bookkeeping</li>
-              <li>Virtual CFO Services</li>
-              <li>Compliance Calendar & Due Dates</li>
-              <li>Business Structuring & Setup</li>
+              <li>Entity Selection & Structuring</li>
+              <li>Accounting & Virtual CFO Services</li>
+              <li>Compliance Calendar Management</li>
               <li>Financial Planning & MIS</li>
             </ul>
             <a class="btn w-full ghost" href="#contact">Get Started</a>
