Simplify HTML structure to match premium CSS
- Removed complex nested hero structure
- Updated button classes (btn-primary, btn-secondary)
- Centered hero layout matching CSS
- Cleaned up header navigation
- Removed old pill/card classes
- Simple, semantic HTML structure

Result: HTML now properly displays with agency-level CSS

--- a/index.html
+++ b/index.html
@@ -54,78 +54,35 @@
 </head>
 
 <body>
-  <div class="bg-ambient"></div>
-  <div class="page-shell">
-    <header class="site-header">
-      <div class="nav">
-        <div class="brand">
-          <div class="brand-mark">A</div>
-          <div>
-            <div class="brand-name">Accura</div>
-            <div class="brand-tag">Tax Consultancy</div>
-          </div>
-        </div>
-        <nav class="nav-links">
+  <div class="container">
+    <header>
+      <nav>
+        <div class="brand">Accura</div>
+        <div class="nav-links">
           <a href="#services">Services</a>
-          <a href="#process">Process</a>
-          <a href="#plans">Plans</a>
-          <a href="#faq">FAQ</a>
-          <a href="#contact" class="pill pill-light">Book consult</a>
-        </nav>
-      </div>
-      <div class="hero">
-        <div class="hero-copy">
-          <div class="pill-group">
-            <div class="pill pill-soft">✓ Independent Tax Experts</div>
-            <div class="pill pill-light">Pan-India Client Support</div>
-          </div>
-          <h1>Expert Tax & Compliance Consultancy for Individuals & Businesses in India</h1>
-          <p class="lead">
-            Professional guidance across Income Tax, GST, ROC Compliance, and strategic Business Advisory. We deliver
-            practical, transparent solutions tailored to your specific needs.
-          </p>
-          <div class="hero-actions">
-            <a class="btn primary" href="#contact">Get Expert Consultation</a>
-            <a class="btn ghost"
-              href="https://wa.me/919999999999?text=Hi,%20I%20need%20expert%20help%20with%20tax%20compliance"
-              target="_blank" rel="noopener">Chat on WhatsApp</a>
-          </div>
-          <div class="trust">
-            <div>✓ Practical & Transparent</div>
-            <div>✓ Client-First Approach</div>
-            <div>✓ Results-Oriented</div>
-          </div>
+          <a href="#contact">Contact</a>
+          <a href="#contact" class="btn btn-primary">Get Started</a>
         </div>
-        <div class="hero-card">
-          <div class="card-header">Why Choose Us</div>
-          <div class="card-body">
-            <ul class="checklist">
-              <li>Independent experts focused on your success</li>
-              <li>Practical solutions, not textbook advice</li>
-              <li>Transparent pricing & timely delivery</li>
-              <li>Long-term partnership approach</li>
-            </ul>
-            <a class="btn w-full primary" href="#contact">Start Your Tax Strategy</a>
-            <div class="disclaimer">Professional tax consultancy. This website is for informational purposes only.
-            </div>
-          </div>
-        </div>
-        <div class="hero-visual">
-          <div class="hero-visual-content">
-            <div class="tagline">Serving clients across India</div>
-            <h3>Income Tax, GST, ROC & Business Advisory</h3>
-            <div class="visual-metrics">
-              <div class="visual-chip">Income Tax</div>
-              <div class="visual-chip">GST Services</div>
-              <div class="visual-chip">ROC Compliance</div>
-              <div class="visual-chip">Business Advisory</div>
-            </div>
-          </div>
-        </div>
-      </div>
+      </nav>
     </header>
 
     <main>
+      <div class="hero">
+        <h1>Expert Tax & Compliance Consultancy</h1>
+        <p class="lead">
+          Professional guidance for Indian businesses and individuals. Income Tax, GST, ROC Compliance & Strategic
+          Planning.
+        </p>
+        <div class="hero-actions">
+          <a href="#contact" class="btn btn-primary">Get Expert Consultation</a>
+          <a href="https://wa.me/919999999999" target="_blank" class="btn btn-secondary">Chat on WhatsApp</a>
+        </div>
+        <div class="trust-signals">
+          <div>✓ Independent Experts</div>
+          <div>✓ Transparent Pricing</div>
+          <div>✓ Pan-India Support</div>
+        </div>
+      </div>
       <section class="section highlight-strip">
         <div class="highlight-grid">
           <div class="highlight-chip">Independent Tax Experts</div>
